<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_PartStatus" Id="{c50a75f3-cffd-4849-9260-451d01f33ca8}">
    <Declaration><![CDATA[TYPE ST_PartStatus :
STRUCT
	bBarcodeStatus			: BOOL := FALSE;
	sBarcode				: STRING(255) := '';
	bFillerStatus			: BOOL := FALSE;
	bCapperStatus			: BOOL := FALSE;
	bWeightStatus			: BOOL := FALSE;
	fActualWeightMg			: LREAL := 0.0;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>