<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_Capper" Id="{1311f335-37a5-422d-8020-047ada312221}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Capper EXTENDS FB_Station
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	bTriggerRead			AT %Q* : BOOL;
	sBarcodeRead			AT %I* : STRING(255);
	iWorkState				: DINT;
	iRetries				: DINT;
	tmrRetry				: TON;
END_VAR
VAR CONSTANT
	NO_READ					: STRING(255) := 'NO_READ';
	READ_RETRY_COUNT		: DINT := 3;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="DoWork" Id="{3806cbc9-5ff0-4ea9-9c3c-5824e30bd433}">
      <Declaration><![CDATA[METHOD PROTECTED  DoWork : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[CASE iWorkState OF
	0:
		iRetries := 0;
		sBarcodeRead := '';
		iWorkState := 10;
		bTriggerRead := TRUE;
		
	10:
		IF sBarcodeRead <> '' THEN
			bTriggerRead := FALSE;
			iWorkState := 20;
		END_IF
		
	11:
		tmrRetry(IN:=TRUE, PT:=T#500MS);
		IF tmrRetry.Q THEN
			tmrRetry(IN:=FALSE);
			bTriggerRead := TRUE;
			iWorkState := 20;
		END_IF
		
	20:
		IF sBarcodeRead = NO_READ THEN
			IF iRetries < READ_RETRY_COUNT THEN
				iRetries := iRetries + 1;
				iWorkState := 11;
			ELSE
				pPartStatus^.bBarcodeStatus := FALSE;
				pPartStatus^.sBarcode := NO_READ;
				iWorkState := 30;
			END_IF
		ELSE
			pPartStatus^.bBarcodeStatus := TRUE;
			pPartStatus^.sBarcode := sBarcodeRead;
			iWorkState := 30;
		END_IF
		
	30:
		iWorkState := 0;
		DoWork := TRUE;
	
END_CASE]]></ST>
      </Implementation>
    </Method>
    <Method Name="FaultHandler" Id="{16aadb32-33ab-4003-9844-ff7757fe3c89}">
      <Declaration><![CDATA[METHOD PROTECTED  FaultHandler : E_StationState
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_Capper">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_Capper.DoWork">
      <LineId Id="5" Count="1" />
      <LineId Id="25" Count="0" />
      <LineId Id="15" Count="1" />
      <LineId Id="37" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="19" Count="1" />
      <LineId Id="46" Count="0" />
      <LineId Id="48" Count="5" />
      <LineId Id="47" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="28" Count="1" />
      <LineId Id="31" Count="0" />
      <LineId Id="33" Count="2" />
      <LineId Id="54" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="26" Count="1" />
      <LineId Id="36" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="56" Count="1" />
      <LineId Id="59" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="7" Count="0" />
    </LineIds>
    <LineIds Name="FB_Capper.FaultHandler">
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>