<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_Filler" Id="{6295f515-0cbf-4a9e-9a05-3f3e3f3d6db2}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Filler IMPLEMENTS IStation
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	bPartPresent				: BOOL;
	bReady						: BOOL;
	bBusy						: BOOL;
	
	StationState				: E_StationState;
	pPartStatus					: POINTER TO ST_PartStatus;
	
	tmrWork						: TON;
	tmrDelay					: TON;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Property Name="Busy" Id="{7b22d881-ebdb-4f3f-befe-dc51dc54aaa2}">
      <Declaration><![CDATA[PROPERTY Busy : BOOL
]]></Declaration>
      <Get Name="Get" Id="{ca417ef2-f1af-4039-b554-114d2928bdf1}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="Execute" Id="{ff5674ff-bdfb-419d-a54e-f90304492f60}">
      <Declaration><![CDATA[METHOD Execute : PVOID
VAR
	
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[CASE StationState OF
	
	E_StationState.IDLE:
		
		IF bPartPresent THEN
			tmrDelay(IN:=TRUE, PT:=T#500MS);
			IF tmrDelay.Q THEN
				StationState := E_StationState.WORKING;
			END_IF
		ELSE
			bReady := TRUE;
			bBusy := FALSE;
		END_IF
		
	E_StationState.WORKING:
		
		bReady := FALSE;
		bBusy := TRUE;
		
		tmrWork(IN:= TRUE, PT:=T#1.5S);
		IF tmrWork.Q THEN
			StationState := E_StationState.DONE;
			tmrWork(IN:=FALSE);
		END_IF
	
	E_StationState.DONE:
	
		bReady := TRUE;
		bBusy := FALSE;
		
		IF NOT bPartPresent THEN
			IF PartStatus <> 0 THEN
				PartStatus^.bFillerStatus := TRUE;
			END_IF
			StationState := E_StationState.IDLE;
		END_IF
		
END_CASE]]></ST>
      </Implementation>
    </Method>
    <Property Name="Faulted" Id="{2979689c-56ae-45ad-889c-8947b962ccd6}">
      <Declaration><![CDATA[PROPERTY Faulted : BOOL
]]></Declaration>
      <Get Name="Get" Id="{ac2e006c-b510-42e2-8be1-91884283522f}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="PartPresent" Id="{95bfdd99-c2ff-4ea8-a069-a6af56c1f591}">
      <Declaration><![CDATA[PROPERTY PartPresent : BOOL
]]></Declaration>
      <Get Name="Get" Id="{c1570d8d-2d16-4701-b97f-5e49092a4e7e}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[PartPresent := bPartPresent;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="PartStatus" Id="{cfb0896c-0015-4e79-83bb-e427abd35db0}">
      <Declaration><![CDATA[PROPERTY PartStatus : POINTER TO ST_PartStatus
]]></Declaration>
      <Get Name="Get" Id="{4dd7c970-06df-4ded-8394-62151b37c1ec}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{caafe008-208b-409e-8c59-94a3eb8658cc}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="Ready" Id="{0c567ab7-f2cc-4ae2-bbee-7022ed467954}">
      <Declaration><![CDATA[PROPERTY Ready : BOOL
]]></Declaration>
      <Get Name="Get" Id="{c6abe93d-9dd7-495c-9228-987f2d612abd}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[Ready := bReady;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <LineIds Name="FB_Filler">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_Filler.Busy.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Filler.Execute">
      <LineId Id="7" Count="2" />
      <LineId Id="13" Count="5" />
      <LineId Id="43" Count="2" />
      <LineId Id="19" Count="14" />
      <LineId Id="46" Count="2" />
      <LineId Id="34" Count="6" />
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Filler.Faulted.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Filler.PartPresent.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Filler.PartStatus.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Filler.PartStatus.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Filler.Ready.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>